--- a/README.adoc
+++ b/README.adoc
@@ -1,18 +1,26 @@
-= Speaker Notes Extractor
+= Asciidoctor Slides Notes Exporter
 
-This project generates a Docker image to be used to extract the notes of a `slides.adoc` file.
+This project generates a container image to be used to extract the notes of a `slides.adoc` file.
+
+== Asciidoctor Slides Infrastructure
+
+The following projects are part of the Asciidoctor Slides infrastructure:
+
+* https://github.com/vshn/asciidoctor-slides[Generator] encapsulating a Node.js application driving the creation of the `slides.html` HTML file
+* https://github.com/vshn/asciidoctor-slides-cookiecutter[Cookiecutter] offering a simple mechanism to generate new presentation slide projects
+* https://github.com/vshn/asciidoctor-slides-preview[Preview] allowing the live preview of slides on `localhost:2020`
+* https://github.com/vshn/asciidoctor-slides-notes-exporter[Speaker Notes Exporter] to export speaker notes (this project)
 
 == Usage
 
 To get raw Asciidoc on stdout:
 
-`docker run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 /convert/slides.adoc`
+`podman run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 /convert/slides.adoc`
 
 To get a file called `speaker-notes.html` in the current directory:
 
-`docker run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 html /convert/slides.adoc`
+`podman run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 html /convert/slides.adoc`
 
 To get a file called `speaker-notes.pdf` in the current directory:
 
-`docker run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 pdf /convert/slides.adoc`
-
+`podman run --rm --volume ${PWD}:/convert vshn/slides-notes-exporter:1.0 pdf /convert/slides.adoc`
